--- a/webapp/composer.json
+++ b/webapp/composer.json
@@ -6,7 +6,10 @@
     "type": "project",
     "require": {
         "php": "^8.1",
-        "laravel/lumen-framework": "^10.0"
+        "laravel/lumen-framework": "^10.0",
+        "illuminate/mail": "^10.48",
+        "irazasyed/larasupport": "^1.7",
+        "tymon/jwt-auth": "*"
     },
     "require-dev": {
         "fakerphp/faker": "^1.9.1",
