--- a/webapp/.env.example
+++ b/webapp/.env.example
@@ -15,5 +15,14 @@ DB_DATABASE=homestead
 DB_USERNAME=homestead
 DB_PASSWORD=secret
 
+MAIL_MAILER=
+MAIL_HOST=
+MAIL_PORT=
+MAIL_USERNAME=
+MAIL_PASSWORD=
+MAIL_ENCRYPTION=
+MAIL_FROM_ADDRESS="admin@administrator.example.com"
+MAIL_FROM_NAME="Administrator"
+
 CACHE_DRIVER=file
 QUEUE_CONNECTION=sync
